--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
 <style>
   body {
     text-align: center;
-    background: url('./dpc.png') no-repeat center center fixed;
+    background: url('./dpc.jpg') no-repeat center center fixed;
     background-size: cover;
   }
   article {
     width: 80%;
     margin: 5% auto;
-    background: rgba(0,0,0,0.5);
+    background: rgba(255,255,255,0.5);
     padding: 0.5%;
-    color: rgb(150, 200, 175);
+    color: rgb(0,0,0);
     font-size: 0.5em;
+    text-shadow:
+    -1px -1px 0 rgb(255,255,255),
+    1px -1px 0 rgb(0,0,0),
+    -1px 1px 0 rgb(0,0,0),
+    1px 1px 0 rgb(0,0,0);
   }
   @media (min-width: 768px) {
     article {
